public/css/styles.css
* {
  box-sizing: border-box;
}

h1,
h2,
h3 {
  font-family: 'Montserrat', sans-serif;
}

body {
  margin: 0;
  padding: 0;
  text-align: center;
  background-color: white;
  font-family: 'Roboto', sans-serif;
}

/***-------------------------Header Area--------------------------------***/
header {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  margin: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: white;
}

.siteName {
  grid-row: 1/3;
  margin: auto;
  padding-left: 5px;
  font-size: x-large;
}

#account {
  grid-row: 1/2;
  font-size: x-small;
}

.siteName a {
  text-decoration: none;
  color: black;
  font-weight: bold;
}

#account a {
  text-decoration: none;
  color: black;
  font-weight: bold;
}

/***-------------------------Navigation Area--------------------------------***/
nav {
  background-color: #333;
  padding: 10px;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
}

nav ul li {
  margin: 0 clamp(5px, 2vw, 20px);
  color: white;
}

nav ul li a {
  color: white;
  text-decoration: none;
  font-weight: bold;
  transition: color 0.3s ease;
}

nav ul li a:hover {
  color: #97c7f7;
  text-shadow: 0 0 5px rgba(3, 73, 131, 0.5);
}

/***-------------------------Hero Area--------------------------------***/
.hero {
  display: block;
  padding: 20px;
  padding-bottom: 0;
  text-align: left;
  max-width: 500px;
}

.hero h2 {
  grid-column: 1/4;
  grid-row: 1/2;
}

.hero .car {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  background-image: url('/images/vehicles/delorean.jpg');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  margin: 0;
}

.hero .car-info {
  grid-column: 1/2;
  grid-row: 1/3;
  background-color: rgb(255, 255, 255, 0.5);
  margin: auto;
}

.car-info h3 {
  color: rgb(3, 73, 131);
  font-weight: bold;
  font-size: smaller;
  margin-top: 0;
  margin-bottom: 5px;
}

.car-info ul {
  list-style-type: none;
  padding-left: 0;
  margin: 0;
  font-size: smaller;
  color: rgb(3, 73, 131);
}

button {
  background-color: rgb(3, 73, 131);
  color: white;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
  margin-top: 5px;
}

/***-------------------------Main Content Area--------------------------------***/

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  padding-top: 0;
}

.reviews {
  text-align: left;
  width: 100%;
}

.reviews ul {
  text-align: left;
  max-width: 500px;
  margin: 0;
  padding-left: 20px;
}

.reviews li {
  font-size: smaller;
}

.upgrades {
  text-align: left;
  width: 100%;
}

.upgrades-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  margin-top: 10px;
}

.upgrades-grid div {
  display: flex;
  flex-direction: column;
}

.upgrades-grid .image {
  background-color: rgb(3, 73, 131);
  margin: 0;
  padding: 0;
  border: 2px solid black;
  height: 100px;
}

.image img {
  margin: auto;
}

.upgrades-grid a {
  display: inline-block;
  margin: 0 auto;
}

footer {
  background-color: white;
  color: black;
  padding: 10px;
  margin-top: 20px;
}

footer a {
  color: rgb(3, 73, 131);
  text-decoration: none;
}

footer a:hover {
  color: black;
  text-decoration: underline;
}

/***-------------------------ClassificationGrid Area--------------------------------***/
#inv-display {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 1.5rem;
  list-style: none;
  padding: 1rem;
  margin: 0;
}

h1 {
  margin: 0;
  padding-top: 20px;
}

#inv-display li {
  border: 1px solid rgb(211, 211, 211);
  border-radius: 10px;
  padding: 1rem;
  background-color: white;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  text-align: center;
}

#inv-display img {
  max-width: 100%;
  border-radius: 5px;
  height: 180px;
  object-fit: contain;
}

.namePrice {
  margin-top: 0.5rem;
}

.namePrice h2 {
  font-size: 1.1rem;
  margin: 0.5rem 0;
}

.namePrice a {
  color: rgb(3, 73, 131);
}

.namePrice span {
  font-weight: bold;
  color: black;
}


/*** ------------------------- Vehicle Detail Area ------------------------- ***/
#vehicle-detail {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
  padding: 20px;
  margin: auto;
  background-color: white;
  border: 1px solid rgb(211, 211, 211);
  border-radius: 10px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  max-width: 1300px;
}

#vehicle-detail img {
  width: 100%;
  height: auto;
  max-height: 400px;
  object-fit: contain;
  border-radius: 8px;
}

.vehicle-info {
  text-align: left;
  color: #333;
  padding: 0 10px;
}

.vehicle-info h2 {
  font-size: 2rem;
  color: rgb(3, 73, 131);
  margin-top: 0;
  margin-bottom: 1rem;
}

.vehicle-info p {
  font-size: 1.1rem;
  margin: 0.5rem 0;
}

.vehicle-info strong {
  color: rgb(3, 73, 131);
}

/*** ------------------------- Login/Registration Pages ------------------------- ***/
.login-form,
.registration-form {
  background-color: white;
  padding: 1rem;
  border-radius: 12px;
  width: 100%;
  max-width: 400px;
  margin: auto;
  display: flex;
  flex-direction: column;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
  border: 1px solid rgb(211, 211, 211);
}

.login-form label,
.registration-form label {
  color: #777777;
  font-size: 0.9rem;
  margin-bottom: 0.2rem;
  margin-top: 1rem;
  text-align: start;
}

.login-form input,
.registration-form input {
  padding: 0.75rem;
  font-size: 1rem;
  border: 1px solid rgb(211, 211, 211);
  border-radius: 6px;
  margin-bottom: 1rem;
  background-color: #fcfcfc;
  color: #333333;
  transition: border-color 0.3s ease, background-color 0.3s ease;
}

.login-form input:focus,
.registration-form input:focus {
  border-color: #777777;
  background-color: white;
  outline: none;
}

.login-form button,
.registration-form button {
  padding: 0.75rem;
  border: none;
  border-radius: 30px;
  background-color: #2b3a4b;
  color: white;
  font-weight: 600;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-top: 1.5rem;
  width: 60%;
  align-self: center;
}

.login-form button:hover,
.registration-form button:hover {
  background-color: #555555;
}

.signup-text {
  text-align: center;
  margin-top: 1rem;
  color: #555555;
  font-size: 0.9rem;
}

.signup-text a {
  color: #2b3a4b;
  text-decoration: underline;
  transition: color 0.3s ease;
}

#passwordBtn {
  color: #777777;
  font-size: 0.75rem;
  margin-top: -0.5rem;
  margin-bottom: 1rem;
  cursor: pointer;
  font-weight: bold;
  user-select: none;
  text-align: end;
}

.registration-form input::placeholder {
  color: #777777;
  font-style: italic;
  font-size: 0.9rem;
}

ul.notice {
  border: 1px solid rgb(211, 211, 211);
  list-style-type: none;
  padding-left: 0;
  color: red;
}

#passwordRequirements p {
  color: #777777;
}

input:required:invalid,
input:focus:invalid {
  border-left: 3px solid rgb(226, 54, 54);
}

input:required:valid {
  border-left: 3px solid rgb(24, 146, 89);
}


/*** ------------------------- Large Screen Styles ------------------------- ***/
@media (min-width: 768px) {

  body {
    background-image: url('../images/site/checkerboard.jpg');
    background-repeat: repeat;
    background-size: auto;
  }

  header,
  .content {
    max-width: 1300px;
    margin: auto;
    background-color: white;
  }

  main {
    max-width: 1300px;
    background-color: white;
    margin: auto;
  }

  nav {
    max-width: 1300px;
    margin: auto;
  }

  nav ul {
    flex-direction: row;
    justify-content: center;
  }

  nav ul li {
    margin: 0 clamp(5px, 5vw, 250px);
  }

  .hero {
    background-color: white;
    display: flex;
    flex-direction: column;
    max-width: 1300px;
    text-align: left;
    margin: auto;
  }

  .car {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 40px;
    gap: 40px;
  }

  .car-info {
    flex: 1;
    max-width: 400px;
  }

  .car-info li,
  .car-info h3 {
    font-size: medium;
  }

  .car-info h3 {
    padding-bottom: 10px;
  }

  .car-info ul {
    padding-bottom: 10px;
  }

  .content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr;
    grid-gap: 30px;
    justify-content: space-around;
    align-items: start;
  }

  .content .upgrades,
  .content .reviews {
    margin-top: 0;
    display: flex;
    flex-direction: column;
  }

  .reviews {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  .reviews ul {
    font-size: x-large;
    max-width: 700px;
    width: 100%;
  }

  .reviews ul li {
    padding: 10px 0;
  }

  .upgrades {
    grid-column: 1/2;
    grid-row: 1/2;
    align-items: stretch;
  }

  .upgrades-grid {
    margin-top: 0;
  }

  .hero img {
    max-width: 600px;
  }

  h1 {
    padding-bottom: 1rem;
  }

  #vehicle-detail {
    grid-template-columns: 1fr 1fr;
    align-items: start;
  }

  #vehicle-detail img {
    max-width: 100%;
    margin: auto;
  }

  .vehicle-info {
    padding-left: 2rem;
  }

  footer {
    max-width: 1300px;
    margin: auto;
  }
}

